# RO2-homework

./: .gitignore  README.md
report/: Appendix.tex  abstract.tex  alg_esatti.tex  biblio.bib  conclusions.tex  euristici.tex  intro.tex  matheuristic.tex  modelli_compatti.tex  report.aux  report.bbl  report.tex  report.toc
tsp/: CMakeLists.txt  readme.md
tsp/src/: callback.c  callback.h  compact_models.c  compact_models.h  convexhull.cpp  genetic_algorithm.c  genetic_algorithm.h  hardfixing.c  hardfixing.h  heuristics.c  heuristics.h  localbranching.c  localbranching.h  loop_method.c  loop_method.h  main.c  multi_start.c  multi_start.h  simulated_annealing.c  simulated_annealing.h  tabu_search.c  tabu_search.h  tsp.c  tsp.h  utilities.c  utilities.h  vns.c  vns.h
